--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>Kelvin - Bootstrap 3 Resume Theme</title>
+    <title>Allie and Matt 11.04.2017</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -72,10 +72,11 @@
 			<div class="row">
 				
 				<div class="col-lg-2 col-lg-offset-1">
-					<h5>ABOUT</h5>
+					<h5>Home</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>I'm web designer & front-end developer with 7 years of professional experience. I'm interested in all kinds of visual communication, but my major focus is on designing web, mobile & tablet interfaces. I also have skills in other fields like branding, icon design or web development.</p>
+					<p>We are so excited to invite you to join us on our big day.  We wouln't be where we are now without each and every one of you.  Washington DC is where we met and has become our home and we hope you can come and celebrate with us and enjoy some of our favorite places too!</p>
+					<p>Love, Allie and Matt</p>
 				</div>
 				<div class="col-lg-3">
 					<p><a href="#"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
