--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
-					<h3>11 - 4 - 2017</h3>
+					<h3>11.4.2017</h3>
 					<h1>Allie & Matt</h1>
 					<h3>ARE GETTING MARRIED</h3>
 				</div><!--/.col-lg-12 -->
@@ -150,11 +150,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -163,11 +163,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -176,11 +176,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -189,11 +189,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -202,11 +202,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -215,11 +215,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -228,11 +228,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -241,11 +241,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -265,11 +265,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -278,11 +278,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -291,11 +291,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -304,11 +304,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -317,24 +317,24 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
 					<div class="col-lg-2 col-lg-offset-1">
-						<h3>Matt Davis/h3>
+						<h3>Matt Davis</h3>
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -343,11 +343,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -356,11 +356,11 @@
 					</div>
 					<div class="col-lg-2 container-fluid">
     					<div class="row">
-					        <div class="col-xs-6">
-					            Container Left
+					        <div class="col-xs-4">
+								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 					        </div>
-					        <div class="col-lg-6">
-					            Container Right
+					        <div class="col-lg-8">
+					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
@@ -376,7 +376,7 @@
 		</div>
 		<div class="container fullsection">
 			<div class="row">
-				<div class="col-lg-2 centered">
+				<div id="mapholder" class="col-lg-2 centered">
 					<iframe id="locationmap" src="untitled.html"></iframe>
 			
 				</div>
@@ -384,16 +384,272 @@
 			<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
 					<h3>Old Post Office Pavilion</h3>
+					<h5>1100 Pennsylvania Ave NW, Washington DC 20004</h5>
 				</div>
 				<div class="col-lg-2 container-fluid">
 		    		<div class="row">
 						<div class="col-xs-6">
-							Container Left
+							<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
 						</div>
-						<div class="col-lg-6">
-							Container Right
+						<div class="col-xs-6">
+							Phone <a href="tel:2026951100">(202) 695-1100</a>
+							<p>stuff here</p>
 						</div>
 					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>Grand Hyatt Washington</h3>
+					<h5>1000 H St NW, Washington DC 20001</h5>
+				</div>
+				<div class="col-lg-2 container-fluid">
+		    		<div class="row">
+						<div class="col-xs-6">
+							<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+						</div>
+						<div class="col-xs-6">
+							 Phone <a href="tel:2025821234">(202) 582-1234</a>
+							 <p>stuff here</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>JW Marriott Washington, DC</h3>
+					<h5>1331 Pennsylvania Ave NW, Washington, DC 20004/h5>
+				</div>
+				<div class="col-lg-2 container-fluid">
+		    		<div class="row">
+						<div class="col-xs-6">
+							<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+						</div>
+						<div class="col-xs-6">
+							Phone <a href="tel:2023932000">(202) 393-2000</a>
+							<p>stuff here</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<section id="scheduleofevents" name="scheduleofevents"></section>
+	<div id="scheduleofevents">
+		<div class="col-lg-2 col-lg-offset-1">
+			<h1>Schedule of Events</h1>
+		</div>
+		<div class="container fullsection">
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>Friday 11.3.2017</h3>
+				</div>
+				<div class="col-lg-2 container-fluid">
+		    		<div class="row">
+						<div class="col-xs-3 righttext">
+							Welcome Party
+						</div>
+						<div class="col-xs-2 centered">
+							4:00 PM
+						</div>
+						<div class="col-lg-7">
+							Info here
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>Saturday 11.4.2017</h3>
+				</div>
+				<div class="col-lg-2 container-fluid">
+		    		<div class="row">
+						<div class="col-xs-3 righttext">
+							Ceremony
+						</div>
+						<div class="col-xs-2 centered">
+							4:00 PM
+						</div>
+						<div class="col-lg-7">
+							Info here
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-3 righttext">
+							Reception
+						</div>
+						<div class="col-xs-2 centered">
+							4:00 PM
+						</div>
+						<div class="col-lg-7">
+							Info here
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>Sunday 11.5.2017</h3>
+				</div>
+				<div class="col-lg-2 container-fluid">
+		    		<div class="row">
+						<div class="col-xs-3 righttext">
+							Brunch
+						</div>
+						<div class="col-xs-2 centered">
+							4:00 PM
+						</div>
+						<div class="col-lg-7">
+							Info here
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<section id="registry" name="registry"></section>
+	<div id="registrywrap">
+		<div class="col-lg-2 col-lg-offset-1">
+			<h1>Registry</h1>
+		</div>
+		<div class="container fullsection">
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>Ann Sandra</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>Pottery Barn</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>Williams & Sonoma</h3>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<section id="whattodo" name="whattodo"></section>
+	<div id="whattodo">
+		<div class="col-lg-2 col-lg-offset-1">
+			<h1>Washington, D.C.</h1>
+		</div>
+		<div class="container fullsection">
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>Restaurants</h3>
+				</div>
+			</div>
+			<div class="col-lg-2 container-fluid">
+		    	<div class="row">
+					<div class="col-xs-5 righttext">
+						Boqueria
+					</div>
+					<div class="col-lg-7">
+						Info here
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-5 righttext">
+						Flippin' Pizza
+					</div>
+					<div class="col-lg-7">
+						Info here
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-5 righttext">
+						Matchbox
+					</div>
+					<div class="col-lg-7">
+						Info here
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-5 righttext">
+						Old Ebbitt Grill
+					</div>
+					<div class="col-lg-7">
+						Info here
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-5 righttext">
+						The Hamilton
+					</div>
+					<div class="col-lg-7">
+						Info here
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-5 righttext">
+						The Fainting Goat
+					</div>
+					<div class="col-lg-7">
+						Info here
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>Things To Do</h3>
+				</div>
+			</div>
+			<div class="col-lg-2 container-fluid">
+		    	<div class="row">
+					<div class="col-xs-5 righttext">
+						Washington Monument
+					</div>
+					<div class="col-lg-7">
+						Info here
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-5 righttext">
+						Capitol Building
+					</div>
+					<div class="col-lg-7">
+						Info here
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-5 righttext">
+						Ford's Theatre
+					</div>
+					<div class="col-lg-7">
+						Info here
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-5 righttext">
+						Newseum
+					</div>
+					<div class="col-lg-7">
+						Info here
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<section id="travel" name="travel"></section>
+	<div id="travelwrap">
+		<div class="col-lg-2 col-lg-offset-1">
+			<h1>Travel</h1>
+		</div>
+		<div class="container fullsection">
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>By Air</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h3>By Car</h3>
 				</div>
 			</div>
 		</div>
