messing with bootstrap columns

--- a/index.html
+++ b/index.html
@@ -68,32 +68,37 @@
 	
 
 	<section id="about" name="about"></section>
-	<div id="hometop" class="col-lg-2 col-lg-offset-1">
-			<h1>Welcome</h1>
-	</div>
-	<div id="intro">
+	<div id="welcomewrap">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6">
-					<p>We are so excited to invite you to join us on our big day.  We wouln't be where we are now without each and every one of you.  Washington DC is where we met and has become our home and we hope you can come and celebrate with us and enjoy some of our favorite places too!</p>
-					<p>Love, <br/>Allie and Matt</p>
+				<div id="hometop" class="col-lg-11">
+					<h1>Welcome</h1>
 				</div>
-			</div><!--/.row -->
+			</div>
+			<div id="intro">
+				<div class="row">
+					<div class="col-lg-12">
+						<p>We are so excited to invite you to join us on our big day.  We wouln't be where we are now without each and every one of you.  Washington DC is where we met and has become our home and we hope you can come and celebrate with us and enjoy some of our favorite places too!</p>
+						<p>Love, <br/>Allie and Matt</p>
+					</div>
+				</div><!--/.row -->
+			</div>
 		</div><!--/.container -->
 	</div><!--/ #intro -->
 
 
 	<section id="resume" name="resume"></section>
 	<!--our story -->
-	<div class="col-lg-2 col-lg-offset-1">
+	<div class="container desc">
+	<div class="row">
+		<div class="col-lg-11">
 			<h1>Our Story</h1>
+		</div>
 	</div>
 	<div class="fullsection">
-	<div class="container desc">
-		
 		<div class="row">
 
-				<div class="col-lg-6">
+				<div class="col-lg-12">
 					<p><t>The first time you met...</t>
 					</p>
 					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
@@ -108,7 +113,7 @@
 	<div class="container desc">
 		<div class="row">
 
-				<div class="col-lg-6">
+				<div class="col-lg-12">
 					<p><t>When you knew they were the one...</t>
 					</p>
 					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
@@ -122,7 +127,7 @@
 	<div class="container desc">
 		<div class="row">
 
-				<div class="col-lg-6">
+				<div class="col-lg-12">
 					<p><t>The proposal...</t>
 					</p>
 					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
@@ -140,230 +145,300 @@
 	<!--Wedding party -->
 	
 	<div id="skillswrap">
-	<div class="col-lg-2 col-lg-offset-1">
-			<h1>Bridesmaids</h1>
+	<div class="container">	
+		<div class="row">
+			<div class="col-lg-11">
+				<h1>Bridesmaids</h1>
+			</div>
+		</div>
 	</div>
 		<div class="container fullsection">
 			<div class="row">
-					<div class="col-lg-2 col-lg-offset-1">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Jessi Friend - Maid of Honor</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Alex Corbutt</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Danielle Caroll</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Danielle Mathewson</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
-						<h3>Juila Guimond</h3>
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
+						<h3>Julia Guimond</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
-						<h3>Juilanne Webb</h3>
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
+						<h3>Julianne Webb</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Layne Starkey</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Meghan Kane</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
+			</div>
 			</div><!--/.row -->
 		</div><!--/.container -->
 	</div><!--/ #skillswrap -->
 
 	<section id="groomsman" name="groomsman"></section>
 	<div id="groomsman">
-		<div class="col-lg-2 col-lg-offset-1">
-			<h1>Groomsmen</h1>
+		<div class="container">	
+			<div class="row">
+				<div class="col-lg-11">
+					<h1>Groomsmen</h1>
+				</div>
+			</div>
 		</div>
 		<div class="container fullsection">
 			<div class="row">
-					<div class="col-lg-2 col-lg-offset-1">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Patrick Robertson - Best Man</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Ben Levine</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Chadd Hippensteel</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Justin Bale</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Matt Daniels</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Matt Davis</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Tim Frend</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
-					<div class="col-lg-2 col-lg-offset-1">
+			</div>
+			<div class="row">
+					<div class="col-lg-11 col-lg-offset-1">
 						<h3>Tim Malloy</h3>
 					</div>
-					<div class="col-lg-2 container-fluid">
+			</div>
+			<div class="row">
+					<div class="col-lg-10 col-lg-offset-2 container-fluid">
     					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
+								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
 					    </div>
 					</div>
+			</div>
 			</div><!--/.row -->
 		</div>
 
@@ -371,65 +446,61 @@
 
 	<section id="accommodations" name="accommodations"></section>
 	<div id="accommodationswrap">
-		<div class="col-lg-2 col-lg-offset-1">
-			<h1>Accomodations</h1>
+		<div class="row">
+			<div class="col-lg-11 col-lg-offset-1">
+				<h1>Accomodations</h1>
+			</div>
 		</div>
 		<div class="container fullsection">
 			<div class="row">
-				<div id="mapholder" class="col-lg-2 centered">
+				<div id="mapholder" class="col-lg-12 centered">
 					<iframe id="locationmap" src="untitled.html"></iframe>
 			
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-2 col-lg-offset-1">
+				<div class="col-lg-11 col-lg-offset-1">
 					<h3>Old Post Office Pavilion</h3>
 					<h5>1100 Pennsylvania Ave NW, Washington DC 20004</h5>
 				</div>
-				<div class="col-lg-2 container-fluid">
-		    		<div class="row">
-						<div class="col-xs-6">
-							<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
-						</div>
-						<div class="col-xs-6">
-							Phone <a href="tel:2026951100">(202) 695-1100</a>
-							<p>stuff here</p>
-						</div>
-					</div>
+			</div>
+		    <div class="row">
+				<div class="col-xs-2 col-xs-offset-1">
+					<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+				</div>
+				<div class="col-lg-9">
+					Phone <a href="tel:2026951100">(202) 695-1100</a>
+					<p>stuff here</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-2 col-lg-offset-1">
+				<div class="col-lg-11 col-lg-offset-1">
 					<h3>Grand Hyatt Washington</h3>
 					<h5>1000 H St NW, Washington DC 20001</h5>
 				</div>
-				<div class="col-lg-2 container-fluid">
-		    		<div class="row">
-						<div class="col-xs-6">
-							<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
-						</div>
-						<div class="col-xs-6">
-							 Phone <a href="tel:2025821234">(202) 582-1234</a>
-							 <p>stuff here</p>
-						</div>
-					</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-2 col-xs-offset-1">
+					<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+				</div>
+				<div class="col-lg-9">
+					 Phone <a href="tel:2025821234">(202) 582-1234</a>
+					 <p>stuff here</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-2 col-lg-offset-1">
+				<div class="col-lg-11 col-lg-offset-1">
 					<h3>JW Marriott Washington, DC</h3>
 					<h5>1331 Pennsylvania Ave NW, Washington, DC 20004/h5>
 				</div>
-				<div class="col-lg-2 container-fluid">
-		    		<div class="row">
-						<div class="col-xs-6">
-							<img class="imgcell" src="assets/img/photos/opop_320x320.JPG"/>
-						</div>
-						<div class="col-xs-6">
-							Phone <a href="tel:2023932000">(202) 393-2000</a>
-							<p>stuff here</p>
-						</div>
-					</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-2 col-xs-offset-1">
+					<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+				</div>
+				<div class="col-lg-9">
+					Phone <a href="tel:2023932000">(202) 393-2000</a>
+					<p>stuff here</p>
 				</div>
 			</div>
 		</div>
@@ -437,8 +508,10 @@
 
 	<section id="scheduleofevents" name="scheduleofevents"></section>
 	<div id="scheduleofevents">
-		<div class="col-lg-2 col-lg-offset-1">
-			<h1>Schedule of Events</h1>
+		<div class="row">
+			<div class="col-lg-11 col-lg-offset-1">
+				<h1>Schedule of Events</h1>
+			</div>
 		</div>
 		<div class="container fullsection">
 			<div class="row">
@@ -511,8 +584,10 @@
 
 	<section id="registry" name="registry"></section>
 	<div id="registrywrap">
-		<div class="col-lg-2 col-lg-offset-1">
-			<h1>Registry</h1>
+		<div class="row">
+			<div class="col-lg-11 col-lg-offset-1">
+				<h1>Registry</h1>
+			</div>
 		</div>
 		<div class="container fullsection">
 			<div class="row">
@@ -535,8 +610,10 @@
 
 	<section id="whattodo" name="whattodo"></section>
 	<div id="whattodo">
-		<div class="col-lg-2 col-lg-offset-1">
-			<h1>Washington, D.C.</h1>
+		<div class="row">
+			<div class="col-lg-11 col-lg-offset-1">
+				<h1>Washington, D.C.</h1>
+			</div>
 		</div>
 		<div class="container fullsection">
 			<div class="row">
@@ -638,8 +715,10 @@
 
 	<section id="travel" name="travel"></section>
 	<div id="travelwrap">
-		<div class="col-lg-2 col-lg-offset-1">
-			<h1>Travel</h1>
+		<div class="row">
+			<div class="col-lg-11 col-lg-offset-1">
+				<h1>Washington, D.C.</h1>
+			</div>
 		</div>
 		<div class="container fullsection">
 			<div class="row">
