--- a/index.html
+++ b/index.html
@@ -97,20 +97,16 @@
 	</div>
 	<div class="fullsection">
 		<div class="row">
-
-				<div class="col-lg-12">
+			<div class="col-lg-12">
 					<p><t>The first time you met...</t>
 					</p>
 					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
 					</p>
 					<p>Matt: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
 					</p>
-				</div>
+			</div>
 		</div><!--/.row -->
 		<hr>
-	</div><!--/.container -->
-	
-	<div class="container desc">
 		<div class="row">
 
 				<div class="col-lg-12">
@@ -123,8 +119,6 @@
 				</div>
 		</div><!--/.row -->
 		<hr>
-	</div><!--/.container -->
-	<div class="container desc">
 		<div class="row">
 
 				<div class="col-lg-12">
@@ -136,7 +130,7 @@
 					</p>
 				</div>
 		</div><!--/.row -->
-	</div><!--/.container -->
+	</div>
 	</div>
 	
 <!--end our story -->
@@ -154,140 +148,108 @@
 	</div>
 		<div class="container fullsection">
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Jessi Friend - Maid of Honor</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+								<img class="imgcell" src="assets/img/photos/jessi_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Alex Corbutt</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+								<img class="imgcell" src="assets/img/photos/alex_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Danielle Caroll</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+								<img class="imgcell" src="assets/img/photos/danielle_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Danielle Mathewson</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+								<img class="imgcell" src="assets/img/photos/mathewson_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Julia Guimond</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Julianne Webb</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+								<img class="imgcell" src="assets/img/photos/webb_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Layne Starkey</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+								<img class="imgcell" src="assets/img/photos/layne_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Meghan Kane</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+								<img class="imgcell" src="assets/img/photos/meghan_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -304,140 +266,108 @@
 		</div>
 		<div class="container fullsection">
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Patrick Robertson - Best Man</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Ben Levine</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Chadd Hippensteel</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Justin Bale</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+								<img class="imgcell" src="assets/img/photos/justin_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Matt Daniels</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Matt Davis</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Tim Frend</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-11 col-lg-offset-1">
+					<div class="col-lg-12">
 						<h3>Tim Malloy</h3>
 					</div>
 			</div>
 			<div class="row">
-					<div class="col-lg-10 col-lg-offset-2 container-fluid">
-    					<div class="row">
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
 					            <p> your story here</p>
 					        </div>
-					    </div>
-					</div>
 			</div>
 			</div><!--/.row -->
 		</div>
@@ -447,7 +377,7 @@
 	<section id="accommodations" name="accommodations"></section>
 	<div id="accommodationswrap">
 		<div class="row">
-			<div class="col-lg-11 col-lg-offset-1">
+			<div class="col-lg-12">
 				<h1>Accomodations</h1>
 			</div>
 		</div>
@@ -459,46 +389,46 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1">
+				<div class="col-lg-12">
 					<h3>Old Post Office Pavilion</h3>
 					<h5>1100 Pennsylvania Ave NW, Washington DC 20004</h5>
 				</div>
 			</div>
 		    <div class="row">
-				<div class="col-xs-2 col-xs-offset-1">
+				<div class="col-xs-4">
 					<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 				</div>
-				<div class="col-lg-9">
+				<div class="col-lg-8">
 					Phone <a href="tel:2026951100">(202) 695-1100</a>
 					<p>stuff here</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1">
+				<div class="col-lg-12">
 					<h3>Grand Hyatt Washington</h3>
 					<h5>1000 H St NW, Washington DC 20001</h5>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-2 col-xs-offset-1">
-					<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+				<div class="col-xs-4">
+					<img class="imgcell" src="assets/img/photos/hyatt_320x320.jpg"/>
 				</div>
-				<div class="col-lg-9">
+				<div class="col-lg-8">
 					 Phone <a href="tel:2025821234">(202) 582-1234</a>
 					 <p>stuff here</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-11 col-lg-offset-1">
+				<div class="col-lg-12">
 					<h3>JW Marriott Washington, DC</h3>
 					<h5>1331 Pennsylvania Ave NW, Washington, DC 20004/h5>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-2 col-xs-offset-1">
-					<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+				<div class="col-xs-4">
+					<img class="imgcell" src="assets/img/photos/marriott_320x320.jpg"/>
 				</div>
-				<div class="col-lg-9">
+				<div class="col-lg-8">
 					Phone <a href="tel:2023932000">(202) 393-2000</a>
 					<p>stuff here</p>
 				</div>
