adding first stories for sizing

--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@
 								<img class="imgcell" src="assets/img/photos/jessi_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
-					            <p> your story here</p>
+					            <p>Allie and I met 28 years ago on February 13, 1989 and it was on that day that she made me a big sister. I am sure my parents were also pretty excited about this addition to our family but I was fairly certain she was all mine. What I didn't know at that moment and would quickly learn is that Allie wasn't going to be my dress-up doll. She was going to be her own genuine and unique self, the one to make us laugh, remind us of the most obscure memory down to every detail, and the one who loves and cares so deeply. I truly admire this about Allie--her compassion and concern for others is unmatched. I am certain the phrase "all the feels" was written with Allie in mind. Paired with that compassion is her sense of humor and confident warmth. Allie has never met a stranger!</p>
+
+								<p>As we grew older, I watched Allie identify and foster friendships with people who, like her, are committed to doing good while not taking themselves too seriously. In that vein, it was during the summer of 2013 that a new person had joined her band of merry travelers...and with a leading role! Once Tim and I met Matt, we knew they were perfect complements. He is the calm to her excitement, the ready laughter to her humor (as she is to his), the sous chef eager to attempt their next kitchen masterpiece, and the "Uncle" to her "Aunt". Jack and Libby love few people more than their Aunt Allie and Uncle Matt and we are all so excited and honored to cheer them on and stand by their sides on their special day...and to clear the dance floor while they both tear it up! We love you, Allie and Matt.
+								</p>
 					        </div>
 			</div>
 			<div class="row">
@@ -350,10 +353,10 @@
 			</div>
 			<div class="row">
 					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+								<img class="imgcell" src="assets/img/photos/timf_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
-					            <p> your story here</p>
+					            <p>It's hard to believe I met Allie when she was 13 years old--more than half her life ago. As Allie famously said when I married her lovely older sister, Jessi...I am the brother she "never wanted but always had!" She delivered that Maid-of-Honor speech with confidence and punch when she was only 17. And she may not have realized it at the time, but that quote so aptly describes our relationship. As the youngest of four boys, I never had a younger sibling to pick on, much less a younger sister! Allie, you were the unfortunate victim of circumstance! Kidding aside, I felt instantly comfortable with Allie, as so many do. She has a gift. She is hilarious, self-deprecating, fun, disarming, thoughtful, generous, and kind--a genuinely great person. Yes, she may be completely unstable on ice and oddly afraid of seagulls, but let's not draw attention to that. She has been at the center of so many wonderful and momentous memories in my life, but also at the center of simple text messages with video links to silly humor. I am eternally thankful to call her "Sis", to have her as an amazing and loving Aunt to my children (and God Mother to one), and that she ultimately found a partner cut from the same quality material. Matt, I'm honored to be your groomsman and can't wait be your brother-in-law. Wishing you both a life of love and happiness.</p>
 					        </div>
 			</div>
 			<div class="row">
