--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
     
     <script src="assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/smoothscroll.js"></script> 
+    <script type="text/javascript" src="assets/js/jquery.smooth-scroll.js"></script> 
     <script src="assets/js/Chart.js"></script>
+ 	<script>
+	    $(document).ready(function() {
 
+		    $('body').smoothScroll({
+	        	delegateSelector: 'ul.nav a'
+	      	});
+	    });
+	</script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="assets/js/html5shiv.js"></script>
@@ -32,17 +39,21 @@
   </head>
 
   <body data-spy="scroll" data-offset="0" data-target="#nav">
-
+<div class="scrollme">
 	<div id="section-topbar">
 		<div id="topbar-inner">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row">
 					<div class="dropdown">
 						<ul id="nav" class="nav">
-							<li class="menu-item"><a class="smoothScroll" href="#about" title="About"><i class="icon-user"></i></a></li>
-							<li class="menu-item"><a class="smoothScroll" href="#resume" title="Resume"><i class="icon-file"></i></a></li>
-							<li class="menu-item"><a class="smoothScroll" href="#work" title="Works"><i class="icon-briefcase"></i></a></li>
-							<li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="icon-envelope"></i></a></li>
+							<li class="menu-item"><a href="#welcomewrap" title="About"><i class="icon-user"></i></a></li>
+							<li class="menu-item"><a href="#ourstory" title="About"><i class="icon-user"></i></a></li>
+							<li class="menu-item"><a href="#weddingparty" title="About"><i class="icon-user"></i></a></li>
+							<li class="menu-item"><a href="#accommodations" title="About"><i class="icon-user"></i></a></li>
+							<li class="menu-item"><a href="#scheduleofevents" title="About"><i class="icon-user"></i></a></li>
+							<li class="menu-item"><a href="#registry" title="About"><i class="icon-user"></i></a></li>
+							<li class="menu-item"><a href="#whattodo" title="About"><i class="icon-user"></i></a></li>
+							<li class="menu-item"><a href="#travel" title="About"><i class="icon-user"></i></a></li>
 						</ul><!--/ uL#nav -->
 					</div><!-- /.dropdown -->
 
@@ -55,7 +66,7 @@
 	</div><!--/ #section-topbar -->
 	
 	<div id="headerwrap">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row centered">
 				<div class="col-lg-12">
 					<h3>11.4.2017</h3>
@@ -66,10 +77,9 @@
 		</div><!--/.container -->
 	</div><!--/.#headerwrap -->
 	
-
 	<section id="about" name="about"></section>
 	<div id="welcomewrap">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
 				<div id="hometop" class="col-lg-11">
 					<h1>Welcome</h1>
@@ -87,9 +97,9 @@
 	</div><!--/ #intro -->
 
 
-	<section id="resume" name="resume"></section>
-	<!--our story -->
-	<div class="container desc">
+	<section id="ourstory" name="ourstory"></section>
+	<!--our story-->
+	<div class="container-fluid desc">
 	<div class="row">
 		<div class="col-lg-11">
 			<h1>Our Story</h1>
@@ -138,15 +148,15 @@
 
 	<!--Wedding party -->
 	
-	<div id="skillswrap">
-	<div class="container">	
+	<div id="weddingparty">
+	<div class="container-fluid">	
 		<div class="row">
 			<div class="col-lg-11">
 				<h1>Bridesmaids</h1>
 			</div>
 		</div>
 	</div>
-		<div class="container fullsection">
+		<div class="container-fluid fullsection">
 			<div class="row">
 					<div class="col-lg-12">
 						<h3>Jessi Friend - Maid of Honor</h3>
@@ -260,14 +270,14 @@
 
 	<section id="groomsman" name="groomsman"></section>
 	<div id="groomsman">
-		<div class="container">	
+		<div class="container-fluid">	
 			<div class="row">
 				<div class="col-lg-11">
 					<h1>Groomsmen</h1>
 				</div>
 			</div>
 		</div>
-		<div class="container fullsection">
+		<div class="container-fluid fullsection">
 			<div class="row">
 					<div class="col-lg-12">
 						<h3>Patrick Robertson - Best Man</h3>
@@ -384,7 +394,7 @@
 				<h1>Accomodations</h1>
 			</div>
 		</div>
-		<div class="container fullsection">
+		<div class="container-fluid fullsection">
 			<div class="row">
 				<div id="mapholder" class="col-lg-12 centered">
 					<iframe id="locationmap" src="untitled.html"></iframe>
@@ -446,7 +456,7 @@
 				<h1>Schedule of Events</h1>
 			</div>
 		</div>
-		<div class="container fullsection">
+		<div class="container-fluid fullsection">
 			<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
 					<h3>Friday 11.3.2017</h3>
@@ -522,7 +532,7 @@
 				<h1>Registry</h1>
 			</div>
 		</div>
-		<div class="container fullsection">
+		<div class="container-fluid fullsection">
 			<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
 					<h3>Ann Sandra</h3>
@@ -548,7 +558,7 @@
 				<h1>Washington, D.C.</h1>
 			</div>
 		</div>
-		<div class="container fullsection">
+		<div class="container-fluid fullsection">
 			<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
 					<h3>Restaurants</h3>
@@ -653,7 +663,7 @@
 				<h1>Washington, D.C.</h1>
 			</div>
 		</div>
-		<div class="container fullsection">
+		<div class="container-fluid fullsection">
 			<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
 					<h3>By Air</h3>
@@ -667,54 +677,12 @@
 		</div>
 	</div>
 
-	<section id="work" name="work"></section>
-	<!--PORTFOLIO DESCRIPTION -->
-	<div class="container desc">
-		<div class="row">
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>PORTFOLIO</h5>
-				</div>
-				<div class="col-lg-6">
-					<p><img class="img-responsive" src="assets/img/port01.jpg" alt=""></p>
-				</div>
-				<div class="col-lg-3">
-					<p>CANALS OF ENGLAND</p>
-				<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-					<sm><i class="icon-tag"></i> design</sm></more> 
-				</p>
-				</div>
-	
-				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="assets/img/port02.jpg" alt=""></p>
-				</div>
-				<div class="col-lg-3">
-						<p>SANKEY</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-						<sm><i class="icon-tag"></i> front-end</sm></more> 
-					</p>
-				</div>
-				
-				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="assets/img/port03.jpg" alt=""></p>
-				</div>
-				<div class="col-lg-3">
-						<p>WE GROW</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-						<sm><i class="icon-tag"></i> web design</sm></more> 
-					</p>
-				</div>
-		
-		</div><!--/.row -->
-		<br>
-		<br>
-	</div><!--/.container -->
-	
 
 
 	<section id="contact" name="contact"></section>
 	<!--FOOTER DESCRIPTION -->
 	<div id="footwrap">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
 			
 				<div class="col-lg-2 col-lg-offset-1">
@@ -749,12 +717,12 @@
 	</div><!--/ #footer -->
 	
 	<div id="c">
-		<div class="container">
+		<div class="container-fluid">
 			<p>Created by <a href="http://www.blacktie.co">BLACKTIE.CO</a></p>
 		
 		</div>
 	</div>
-	
+</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
