--- a/index.html
+++ b/index.html
@@ -40,6 +40,33 @@
 
   <body data-spy="scroll" data-offset="0" data-target="#nav">
 <div class="scrollme">
+	<nav class="navbar navbar-default navbar-fixed-top">
+      <div class="containerbar">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          	<ul class="nav navbar-nav">
+				<li class="menu-item"><a href="#welcomewrap" title="Welcome">Welcome</a></li>
+				<li class="menu-item"><a href="#ourstory" title="Our Story">Our Story</a></li>
+				<li class="menu-item"><a href="#weddingparty" title="Wedding Party">Wedding Party</a></li>
+				<li class="menu-item"><a href="#accommodations" title="Accomodations">Accomodations</a></li>
+				<li class="menu-item"><a href="#scheduleofevents" title="Schedule">Schedule</a></li>
+				<li class="menu-item"><a href="#registry" title="Registry">Registry</a></li>
+				<li class="menu-item"><a href="#whattodo" title="What To Do">What To Do</a></li>
+				<li class="menu-item"><a href="#travel" title="Travel">Travel</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+
+<!--
 	<div id="section-topbar">
 		<div id="topbar-inner">
 			<div class="container-fluid">
@@ -54,16 +81,15 @@
 							<li class="menu-item"><a href="#registry" title="About"><i class="icon-user"></i></a></li>
 							<li class="menu-item"><a href="#whattodo" title="About"><i class="icon-user"></i></a></li>
 							<li class="menu-item"><a href="#travel" title="About"><i class="icon-user"></i></a></li>
-						</ul><!--/ uL#nav -->
-					</div><!-- /.dropdown -->
+						</ul>
+					</div>
 
 					<div class="clear"></div>
-				</div><!--/.row -->
-			</div><!--/.container -->
-
+				</div>
+			</div>
 			<div class="clear"></div>
-		</div><!--/ #topbar-inner -->
-	</div><!--/ #section-topbar -->
+		</div>
+	</div>-->
 	
 	<div id="headerwrap">
 		<div class="container-fluid">
